...
        label = "Início",
        selectedIcon = Icons.Filled.Home,
        unselectedIcon = Icons.Outlined.OutlinedHome,
    ),
    ReiAnixBottomNavDestination(
        route = ReiAnixRoutes.LIBRARY,
        label = "Biblioteca",
        selectedIcon = Icons.Filled.List,
        unselectedIcon = Icons.Outlined.OutlinedList,
    ),
    ReiAnixBottomNavDestination(
        route = ReiAnixRoutes.SEARCH,
        label = "Buscar",
...
